--- a/admin/store_users.phtml
+++ b/admin/store_users.phtml
@@ -1,3 +1,7 @@
+<%
+	Response.CodePage = 65001
+	Response.CharSet = "UTF-8"
+%>
 <!-- #INCLUDE File="local/local.phtml" -->
 <!-- #INCLUDE File="util/xt_func_util.phtml" -->
 <!-- #INCLUDE File="util/xt_func_string.phtml" -->
@@ -6,6 +10,9 @@
 <head>
 <!--#INCLUDE FILE="include/head.phtml"-->
 <!-- BEGIN PAGE LEVEL PLUGINS -->
+<link href="../assets/global/plugins/datatables/datatables.min.css" rel="stylesheet" type="text/css" />
+<link href="../assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.css" rel="stylesheet" type="text/css" />
+<link href="../assets/global/plugins/bootstrap-datepicker/css/bootstrap-datepicker3.min.css" rel="stylesheet" type="text/css" />
 <!-- END PAGE LEVEL PLUGINS -->
 </head>
 
@@ -24,24 +31,99 @@
 				<div class="page-content-wrapper">
 					<!-- BEGIN CONTENT BODY -->
 					<!-- BEGIN PAGE HEAD-->
-					<div class="page-head">
-						<div class="container-fluid">
-							<!-- BEGIN PAGE TITLE -->
-							<div class="page-title">
-								<h1>Dashboard
-									<small>dashboard & statistics</small>
-								</h1>
-							</div>
-							<!-- END PAGE TITLE -->
-						</div>
-					</div>
 					<!-- END PAGE HEAD-->
 					<!-- BEGIN PAGE CONTENT BODY -->
 					<div class="page-content">
 						<div class="container-fluid">
 							<!-- BEGIN PAGE CONTENT INNER -->
 							<div class="page-content-inner">
-								
+								<div class="row">
+									<div class="col-md-12">
+										<!-- Begin: Demo Datatable 1 -->
+										<div class="portlet light portlet-fit portlet-datatable ">
+											<div class="portlet-title">
+												<div class="caption">
+													<i class="icon-settings font-dark"></i>
+													<span class="caption-subject font-dark sbold uppercase">Admin Users</span>
+												</div>
+												<div class="actions">
+													<a href="store_users_edit.phtml?user_id=0" class="btn btn-circle btn-info">
+														<i class="fa fa-plus"></i>
+														<span class="hidden-xs"> New Admin User </span>
+													</a>
+												</div>
+											</div>
+											<div class="portlet-body">
+												<div class="table-container">
+													<div class="table-actions-wrapper">
+														<span> </span>
+														<select class="table-group-action-input form-control input-inline input-small input-sm">
+															<option value="">Select...</option>
+															<option value="Print">Print</option>
+															<option value="">Change Status to ...</option>
+															<option value="Pending">..........Pending</option>
+															<option value="Approve">..........Approve by Manager</option>
+															<option value="Closed">..........Closed</option>
+															<option value="Duplicate">Duplicate</option>
+															<option value="Delete">Delete</option>
+														</select>
+														<button class="btn btn-sm green table-group-action-submit">
+															<i class="fa fa-check"></i> Submit</button>
+													</div>
+													<table class="table table-striped table-bordered table-hover table-checkable" id="datatable_po_list">
+														<thead>
+															<tr role="row" class="heading">
+																<th width="2%">
+																	<label class="mt-checkbox mt-checkbox-single mt-checkbox-outline">
+																		<input type="checkbox" class="group-checkable" data-set="#sample_2 .checkboxes" />
+																		<span></span>
+																	</label>
+																</th>
+																<th width="15%"> User Name </th>
+																<th width="120"> First Name </th>
+																<th width="120"> Last Name </th>
+																<th width="15%"> Email </th>
+																<th width="10%"> Status </th>
+																<th width="10%"> Actions </th>
+															</tr>
+															<tr role="row" class="filter">
+																<td> </td>
+																<td>
+																	<input type="text" class="form-control form-filter input-sm" name="user_id"> 
+																</td>
+																<td>
+																	<input type="text" class="form-control form-filter input-sm" name="FirstName"> 
+																</td>
+																<td>
+																	<input type="text" class="form-control form-filter input-sm" name="LastName"> 
+																</td>
+																<td>
+																	<input type="text" class="form-control form-filter input-sm" name="Email"> 
+																</td>
+																<td>
+																	<select name="user_disable" class="form-control form-filter input-sm">
+																		<option value="">Select...</option>
+																		<option value="0"> Active </option>
+																		<option value="1"> Inactive </option>
+																	</select>
+																</td>
+																<td>
+																	<div class="margin-bottom-5">
+																		<button class="btn btn-sm green btn-outline filter-submit margin-bottom">
+																			<i class="fa fa-search"></i> Search</button>
+																	</div>
+																	<button class="btn btn-sm red btn-outline filter-cancel">
+																		<i class="fa fa-times"></i> Reset</button>
+																</td>
+															</tr>
+														</thead>
+														<tbody> </tbody>
+													</table>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
 							</div>
 							<!-- END PAGE CONTENT INNER -->
 						</div>
@@ -62,12 +144,125 @@
 </div>
 <!--#INCLUDE FILE="include/js.phtml"-->
 <!-- BEGIN PAGE LEVEL PLUGINS -->
-
+<script src="../assets/global/scripts/datatable.js" type="text/javascript"></script>
+<script src="../assets/global/plugins/datatables/datatables.min.js" type="text/javascript"></script>
+<script src="../assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.js" type="text/javascript"></script>
+<script src="../assets/global/plugins/bootstrap-datepicker/js/bootstrap-datepicker.min.js" type="text/javascript"></script>
 <!-- END PAGE LEVEL PLUGINS -->
-
 <!-- BEGIN PAGE LEVEL SCRIPTS -->
 <script type="text/javascript">
+
+var oTable;
+var oTabel2;
+var v1 = "All";
+var v2 = "All";
+var v3 = "All";
 	
+var TableDatatablesAjax = function () {
+
+    var initPickers = function () {
+        //init date pickers
+        $('.date-picker').datepicker({
+            rtl: App.isRTL(),
+            autoclose: true
+        });
+    }
+
+    var handleDemo1 = function () {
+
+        var grid = new Datatable();
+
+        grid.init({
+            src: $("#datatable_po_list"),
+            onSuccess: function (grid, response) {
+                // grid:        grid object
+                // response:    json object of server side ajax response
+                // execute some code after table records loaded
+            },
+            onError: function (grid) {
+                // execute some code on network or other general error  
+            },
+            onDataLoad: function(grid) {
+                // execute some code on ajax data load
+            },
+            loadingMessage: 'Loading...',
+            dataTable: { // here you can define a typical datatable settings from http://datatables.net/usage/options 
+
+                // Uncomment below line("dom" parameter) to fix the dropdown overflow issue in the datatable cells. The default datatable layout
+                // setup uses scrollable div(table-scrollable) with overflow:auto to enable vertical scroll(see: assets/global/scripts/datatable.js). 
+                // So when dropdowns used the scrollable div should be removed. 
+                //"dom": "<'row'<'col-md-8 col-sm-12'pli><'col-md-4 col-sm-12'<'table-group-actions pull-right'>>r>t<'row'<'col-md-8 col-sm-12'pli><'col-md-4 col-sm-12'>>",
+                columnDefs: [ 
+					{ orderable: false, targets: [0,6] },
+					{ className: "text-center", targets: [5] }
+				],
+					
+                "bStateSave": true, // save datatable state(pagination, sort, etc) in cookie.
+
+                "lengthMenu": [
+                    [10, 20, 50, 100, 150, -1],
+                    [10, 20, 50, 100, 150, "All"] // change per page values here
+                ],
+                "pageLength": 20, // default record count per page
+                "ajax": {
+                    "url": "api/sp_store_users_list.phtml", // ajax source
+                },
+                "order": [
+                    [1, "asc"]
+                ]// set first column as a default sort by asc
+            }
+        });
+
+        // handle group actionsubmit button click
+        grid.getTableWrapper().on('click', '.table-group-action-submit', function (e) {
+            e.preventDefault();
+            var action = $(".table-group-action-input", grid.getTableWrapper());
+            if (action.val() != "" && grid.getSelectedRowsCount() > 0) {
+                grid.setAjaxParam("customActionType", "group_action");
+                grid.setAjaxParam("customActionName", action.val());
+                grid.setAjaxParam("id", grid.getSelectedRows());
+                grid.getDataTable().ajax.reload();
+                grid.clearAjaxParams();
+            } else if (action.val() == "") {
+                App.alert({
+                    type: 'danger',
+                    icon: 'warning',
+                    message: 'Please select an action',
+                    container: grid.getTableWrapper(),
+                    place: 'prepend'
+                });
+            } else if (grid.getSelectedRowsCount() === 0) {
+                App.alert({
+                    type: 'danger',
+                    icon: 'warning',
+                    message: 'No record selected',
+                    container: grid.getTableWrapper(),
+                    place: 'prepend'
+                });
+            }
+        });
+
+        //grid.setAjaxParam("customActionType", "group_action");
+        //grid.getDataTable().ajax.reload();
+        //grid.clearAjaxParams();
+    }
+	
+    return {
+
+        //main function to initiate the module
+        init: function () {
+
+            initPickers();
+            handleDemo1();
+        }
+
+    };
+
+}();
+
+jQuery(document).ready(function() {
+    TableDatatablesAjax.init();
+});	
 </script>
 <!-- END PAGE LEVEL SCRIPTS -->
 </body>
